--- a/repo_git/onlinebookstore/pom.xml
+++ b/repo_git/onlinebookstore/pom.xml
@@ -60,6 +60,11 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.15.0</version>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -67,21 +72,21 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.3.7</version>
+			<version>42.7.7</version>
 		</dependency>
 
 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.28</version>
+			<version>9.3.0</version>
 		</dependency>
 
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
+			<version>4.0.1</version>
 		</dependency>
 	</dependencies>
 </project>
