--- a/repo_git/onlinebookstore/pom.xml
+++ b/repo_git/onlinebookstore/pom.xml
@@ -88,5 +88,12 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>4.0.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.10.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
