--- a/repo_git/onlinebookstore/pom.xml
+++ b/repo_git/onlinebookstore/pom.xml
@@ -145,5 +145,12 @@
 			<version>2.2.224</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>5.2.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
