--- a/repo_git/onlinebookstore/pom.xml
+++ b/repo_git/onlinebookstore/pom.xml
@@ -101,6 +101,18 @@
 				<artifactId>versions-maven-plugin</artifactId>
 				<version>2.15.0</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.1.2</version>
+				<configuration>
+					<systemPropertyVariables>
+					<test.env>true</test.env>
+					<test.db.user>sa</test.db.user>
+					<test.db.pass>P@ssw0rdTest123!</test.db.pass>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
