--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   jenkins:
-    image: jenkins/jenkins:lts
+    image: jenkins/jenkins:latest
     container_name: jenkins
     ports:
       - "8080:8080"
@@ -28,7 +28,7 @@ services:
       - cicd
 
   db:
-    image: postgres:13
+    image: postgres:latest
     container_name: sonar-db
     environment:
       - POSTGRES_USER=sonar
