Update PostgreSQL image version in docker-compose.yml to 13

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - cicd
 
   db:
-    image: postgres:latest
+    image: postgres:13
     container_name: sonar-db
     environment:
       - POSTGRES_USER=sonar
