--- a/repo_git/onlinebookstore/pom.xml
+++ b/repo_git/onlinebookstore/pom.xml
@@ -164,11 +164,11 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>2.0.12</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.4.14</version>
+			<artifactId>logback-core</artifactId>
+			<version>1.5.18</version>
 		</dependency>
 	</dependencies>
 </project>
